fix(call): overflow for long user name in incoming call (#3499)

--- a/components/views/media/incomingCall/IncomingCall.less
+++ b/components/views/media/incomingCall/IncomingCall.less
@@ -38,10 +38,13 @@
 
 .user-info {
   .user-name {
+    &:extend(.ellipsis);
     color: #fff;
     font-size: 25px;
     font-family: @primary-font;
     margin-bottom: 0;
+    width: 100%;
+    text-align: center;
   }
   .user-status {
     opacity: 0.5;
